--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "tsc && nodemon src/index.js"
   },
   "dependencies": {
-    "readline": "1.3.0"
+    "readline": "1.3.0",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/node": "^20.2.3",
     "nodemon": "1.18.4"
   },
   "keywords": []
