--- a/package.json
+++ b/package.json
@@ -4,15 +4,31 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "tsc && nodemon src/index.js"
+    "start": "tsc && nodemon src/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "readline": "1.3.0",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "@types/node": "^20.2.3",
-    "nodemon": "1.18.4"
+    "jest": "^29.5.0",
+    "nodemon": "1.18.4",
+    "ts-jest": "^29.1.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "testEnvironment": "node",
+    "rootDir": "./",
+    "testRegex": ".*\\.spec\\.ts$",
+    "detectOpenHandles": true
+
   },
   "keywords": []
 }
